Fix for wrapping hover edit buttons

--- a/pyforge/pyforge/templates/style.css
+++ b/pyforge/pyforge/templates/style.css
@@ -1205,7 +1205,7 @@ ul.ui-tab li a {
     margin: 0;
 }
 .editable .editor .save_controls{
-    width: 110px;
+    width: 115px;
 }
 .editable .editor.multiline .save_holder{
     margin-top: 4px;
